# reminder

./: .env.example  .gitignore  Dockerfile  alembic.ini  database.py  docker-compose.yml  main.py  pyproject.toml  vk_client.py
alembic/: env.py
alembic/versions/: 01d7eb724836_work_in_progress.py  1c7e657f9cd1_work_in_progress.py  352ed1ce2c73_initial_migration.py  4fe70d421ac7_work_in_progress.py  51ab51f65110_work_in_progress.py  889c1c506db2_work_in_progress.py  fdc0e0d0a6d6_work_in_progress.py
server/: app.py
worker/: app.py
worker/jobs/task_reminder/: job.py  models.py
worker/task_reminder/: models.py  task.py
